# codesight

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  SPECS.md  justfile  pyproject.toml
.claude/agents/: business.md  code-improver.md  code.md  judge-agent.md  manager.md  model-quality-auditor.md  prompt-optimizer.md  research.md  security-sentinel.md  specs.md  static-analysis-expert.md
.claude/rules/: delegation.md  structure.md  workflow.md
.self-improvement/: MEMORY.md  workers.yaml
.self-improvement/knowledge/: README.md
business/: README.md  pipeline.md
business/playbooks/: sales-process.md
docs/: MARKET.md  README.md  RESEARCH.md  roadmap.md  vision.md
docs/playbooks/: investigate-bug.md  ship-feature.md
docs/research/: INDEX.md  architecture.md  benchmarks.md  stack.md
scripts/: seed_m365.py
specs/: 002-embedding-model-config.md  003-incremental-refresh.md  004-tree-sitter-chunking.md  006-pluggable-llm-backend.md  007-cross-encoder-reranking.md  008-docker-deployment-fastapi.md  009-benchmark-harness.md  010-verification-loops.md  011-m365-graph-connector.md  012-teams-bot.md  013-workspace-multi-tenancy.md  014-admin-dashboard.md  015-slack-bot.md  README.md
src/codesight/: __init__.py  __main__.py  api.py  config.py  embeddings.py  indexer.py  llm.py  (+2 more)
tasks/: next.md
teams-app/: manifest.json
tests/: test_spec_002_embedding_model_config.py  test_spec_006_pluggable_llm_backend.py  test_spec_007_cross_encoder_reranking.py  test_spec_012_teams_bot.py  test_spec_014_dashboard.py  test_spec_015_slack_bot.py
(+40 files in other folders)
