[project]
name = "semantic-search-mcp"
version = "0.1.0"
description = "MCP server providing semantic code search for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "sentence-transformers>=3.0",
    "lancedb>=0.17",
    "pathspec>=0.12",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/semantic_search_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
